<resources>
    <string name="app_name">Food甲</string>


    <string name="admob_id">ca-app-pub-3596318314144695/8124027094</string>
    <string name="admob_id2">ca-app-pub-3596318314144695/8995617413</string>
    <string name="admob_id_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="admob_interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial">ca-app-pub-3596318314144695/6431408148</string>

    <string name="menu_main_addShop">新增店家</string>

    <string name="networkTv">請打開網路或是WIFI</string>
    <string name="networkBt">重試</string>

    <string name="ShopInformation">店家資訊</string>
    <string name="MenuInformation">菜單資訊</string>
    <string-array name="ShopType">
        <item>早餐</item>
        <item>晚餐</item>
        <item>小吃</item>
        <item>飲料</item>
    </string-array>

    <string name="Menu_Navigation_User_Setting">使用者設定</string>
    <string name="Menu_Navigation_User_Question">關於我們</string>
    <string name="Menu_Navigation_User_Logout">登出</string>

    <string name="Menu_DetailShop_Search">搜尋</string>
    <string name="Menu_DetailShop_Recommend">推薦</string>

    <string name="CommentDialog_PositiveButton">發送</string>
    <string name="CommentDialog_NegativeButton">取消</string>
    <string name="CommentDialog_Title">輸入評論</string>
    <string name="CommentDialog_Success">新增成功</string>
    <string name="CommentDialog_Fail">新增失敗</string>

    <string name="dialog_addmenu_Title">新增菜單</string>
    <string name="dialog_addmenu_Picture">食物照片</string>

    <string name="dialog_addshop_Title">新增店家</string>
    <string name="dialog_addshop_Picture">菜單照片</string>
    <string name="dialog_addshop_hint_ShopName">店家名稱</string>
    <string name="dialog_addshop_hint_Phone">電話(可不輸入)</string>
    <string name="dialog_addshop_hint_Adreess">地址(點擊左邊圖示)</string>
    <string name="dialog_addshop_hint_Open">營業時間(可不輸入)</string>

    <string name="dialog_addmenu_hint_MenuName">菜品名稱</string>
    <string name="dialog_addmenu_hint_Price">價錢</string>
    <string name="dialog_addmenu_hint_Commnet">評論(例如:好吃)</string>

    <string-array name="dialog_addshop_tagSpinner">
        <item>早餐</item>
        <item>晚餐</item>
        <item>小吃宵夜</item>
        <item>飲料</item>
    </string-array>

    <string name="Menu_Question_Title">關於我們</string>
    <string name="Menu_Question_Message">
        逢甲大學資工系四年級\n
        誠徵會寫IOS和美工人員的同學\n
        此APP只是本人開發好玩的\n
        APP發表之所有言論，都是使用者自行發出\n
        與開發者本人毫無相關\n
        目前版本1.0版\n
        一切資訊皆以店家為準\n
    </string>

    <string name="Add_Message">
        提交後並不會馬上顯示\n需要通過審核後才會新增\n請耐心等待，謝謝
    </string>

    <string name="title_activity_maps">Map</string>

    <string name="ShopName">店名</string>
    <string name="OpenTime">營業時間</string>
    <string name="Star">星數</string>
    <string name="Phone">聯絡電話</string>

    <string-array name="userSetting_Title">
        <item>貓</item>
        <item>狗</item>
        <item>男生</item>
        <item>女生</item>
    </string-array>

    <string name="usersetting_update">更新成功</string>
    <string name="usersetting_register">註冊成功</string>
</resources>
