<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailShop.DetailShopActivity">

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_id_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailShopAdView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            ads:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailShopAdView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            ads:layout_constraintBottom_toTopOf="@+id/detailShopAdView"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/detailShopRecyc"
            app:layout_constraintTop_toBottomOf="@+id/detailShopTb" tools:listitem="@layout/cardview_detailshop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/detailShopTb"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:title="@string/ShopInformation"/>
</android.support.constraint.ConstraintLayout>