<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/Add_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@color/browser_actions_text_color" android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/addShopPictureImg" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:text="@string/dialog_addshop_Title"
            android:textSize="28dp"
            android:textColor="@android:color/black" android:layout_marginTop="16dp"/>
    <Button
            android:text="新增"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:id="@+id/addShopAddBt" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:background="@color/fui_bgAnonymous" android:textStyle="bold" android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/addShopPictureImg"/>
    <ImageView
            android:layout_width="@dimen/dialog_add_icon_width"
            android:layout_height="@dimen/dialog_add_icon_height" app:srcCompat="@drawable/ic_shop"
            android:id="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp" app:srcCompat="@drawable/ic_add"
            android:id="@+id/addShopPictureImg" android:scaleType="center"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <ImageView
            android:layout_width="@dimen/dialog_add_icon_width"
            android:layout_height="@dimen/dialog_add_icon_height" app:srcCompat="@drawable/ic_open"
            android:id="@+id/imageView17" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="@dimen/dialog_add_icon_width"
            android:layout_height="@dimen/dialog_add_icon_height" app:srcCompat="@drawable/ic_phone"
            android:id="@+id/imageView18" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView17" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="@dimen/dialog_add_icon_width"
            android:layout_height="@dimen/dialog_add_icon_height" app:srcCompat="@drawable/ic_loaction"
            android:id="@+id/imageView19" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:visibility="visible"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:hint="@string/dialog_addshop_hint_ShopName" android:id="@+id/addShopNameTvEt"
            app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView7" app:layout_constraintBottom_toBottomOf="@+id/imageView7"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView17" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView17"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:hint="@string/dialog_addshop_hint_Open"
            android:id="@+id/addShopOpenTvEt">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView18" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView18"
            app:layout_constraintBottom_toBottomOf="@+id/imageView18" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/dialog_addshop_hint_Phone"
            android:id="@+id/addShopPhoneTvEt"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView19" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView19"
            app:layout_constraintBottom_toBottomOf="@+id/imageView19" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/dialog_addshop_hint_Adreess"
            android:id="@+id/addShopAddressTvEt"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/dialog_addshop_Picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textColor="@color/browser_actions_text_color"
            app:layout_constraintEnd_toEndOf="@+id/addShopPictureImg"
            app:layout_constraintStart_toStartOf="@+id/addShopPictureImg"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView23"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addShopTagSp" app:layout_constraintStart_toEndOf="@+id/imageView23"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView23"
            app:layout_constraintBottom_toBottomOf="@+id/imageView23"/>
    <ImageView
            android:layout_width="@dimen/dialog_add_icon_width"
            android:layout_height="@dimen/dialog_add_icon_height" app:srcCompat="@drawable/ic_shop_type"
            android:id="@+id/imageView23" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>
