<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" app:cardElevation="8dp" app:cardCornerRadius="8dp"
        app:contentPadding="4dp"
>

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
    >

        <ImageView
                android:layout_width="@dimen/cardview_small_icon_width"
                android:layout_height="@dimen/cardview_small_icon_height" app:srcCompat="@drawable/ic_shop"
                android:id="@+id/imageView19" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="@dimen/cardview_small_icon_width"
                android:layout_height="@dimen/cardview_small_icon_height" app:srcCompat="@drawable/ic_star"
                android:id="@+id/imageView27" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView28" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="@dimen/cardview_small_icon_width"
                android:layout_height="@dimen/cardview_small_icon_height" app:srcCompat="@drawable/ic_open"
                android:id="@+id/imageView28" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView30" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="@dimen/cardview_small_icon_width"
                android:layout_height="@dimen/cardview_small_icon_height" app:srcCompat="@drawable/ic_phone"
                android:id="@+id/imageView30" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView19" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/ShopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoShopNameTv" app:layout_constraintStart_toEndOf="@+id/imageView19"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView19"
                app:layout_constraintBottom_toBottomOf="@+id/imageView19" style="@style/cardview_small_textview"/>
        <TextView
                android:text="@string/Star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoStarTv" app:layout_constraintStart_toEndOf="@+id/imageView27"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView27"
                app:layout_constraintBottom_toBottomOf="@+id/imageView27" style="@style/cardview_small_textview"/>
        <TextView
                android:text="@string/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoPhoneTv"
                app:layout_constraintTop_toTopOf="@+id/imageView30"
                app:layout_constraintBottom_toBottomOf="@+id/imageView30"
                app:layout_constraintStart_toEndOf="@+id/imageView30" android:layout_marginStart="8dp"
                style="@style/cardview_small_textview"/>
        <TextView
                android:text="@string/OpenTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoOpenTv" app:layout_constraintStart_toEndOf="@+id/imageView28"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView28"
                app:layout_constraintBottom_toBottomOf="@+id/imageView28" style="@style/cardview_small_textview"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>